feat: As a Security Server Administrator I want to be able to request a signing certificate using ACME from a trusted CA which supports ACME
refs: XRDDEV-2534

--- a/src/security-server/admin-service/ui/src/assets/global-style.scss
+++ b/src/security-server/admin-service/ui/src/assets/global-style.scss
@@ -141,6 +141,14 @@ body,
   }
 }
 
+// Override for Vuetify checkbox input style
+.v-checkbox {
+
+  .v-input__details {
+    font-weight: 600 !important;
+  }
+}
+
 // Override for Vuetify tab style
 .v-tab {
   letter-spacing: normal !important;
