refactor: refactor language switching
small UI improvement

Refs: XRDDEV-2728

--- a/src/security-server/admin-service/ui/src/assets/tables.scss
+++ b/src/security-server/admin-service/ui/src/assets/tables.scss
@@ -31,8 +31,9 @@
   border-collapse: collapse;
 
   td {
-    height: 56px;
+    height: 52px;
     border-bottom: colors.$WarmGrey30 solid 1px;
+    font-size: 14px;
     padding-left: 16px;
   }
   th {
