--- a/src/security-server/admin-service/ui/src/assets/global-style.scss
+++ b/src/security-server/admin-service/ui/src/assets/global-style.scss
@@ -45,8 +45,7 @@ body,
 .xrd-tab-max-width {
   max-width: 850px;
   width: 100%;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: 0 auto;
 }
 
 .xrd-tabs {
