feat(ss): names for subsystems
it builds

Refs: XRDDEV-2761

--- a/src/shared-ui/src/assets/icons.css
+++ b/src/shared-ui/src/assets/icons.css
@@ -89,6 +89,7 @@ i[class*=' icon-']:before {
 }
 .icon-Edit:before {
   content: '\f10f';
+  transform: translate(-1px, -7px);
 }
 .icon-Error-notification:before {
   content: '\f110';
