--- a/ansible/roles/xroad-is/templates/test-service.service.j2
+++ b/ansible/roles/xroad-is/templates/test-service.service.j2
@@ -1,10 +1,10 @@
 [Unit]
-Description=XRD4J Example Adapter
+Description=XRD4J test-service
 After=network.target
 
 [Service]
 Environment="JAVA_HOME={{ java_17_home }}"
-ExecStart={{ java_17_home }}/bin/java -jar /opt/example-adapter.war
+ExecStart={{ java_17_home }}/bin/java -Dserver.port=8082 -jar /opt/test-service.war
 Restart=always
 
 [Install]
