--- a/src/central-server/admin-service/ui/src/assets/forms.scss
+++ b/src/central-server/admin-service/ui/src/assets/forms.scss
@@ -32,8 +32,7 @@
   width: 100%;
   max-width: 1280px;
   background-color: colors.$White100;
-  margin: 40px;
-  margin-top: 30px;
+  margin: 30px auto 40px;
   box-shadow: colors.$DefaultShadow;
   border-radius: 4px;
   display: flex;
