feat: new X-Road 8 theme
post rebase fixes + admin users migration

Refs: XRDDEV-2917

--- a/src/shared-ui/src/assets/xrd8/_material-symbols-rounded.scss
+++ b/src/shared-ui/src/assets/xrd8/_material-symbols-rounded.scss
@@ -111,6 +111,9 @@ $icons: (
   question_exchange: "\f7f3",
   event: "\e878",
   build_circle: "\ef48",
+  lock_reset: "\eade",
+  manage_accounts: "\f02e",
+  person: "\e7fd",
 );
 
 @mixin msr-icons {
