--- a/src/shared-ui/src/assets/xrd8/fonts.css
+++ b/src/shared-ui/src/assets/xrd8/fonts.css
@@ -26,14 +26,14 @@
  */
 @font-face {
   font-family: 'Material Symbols Rounded';
-  src: url('./MaterialSymbolsRounded.woff2') format('woff2'),
-  url('./MaterialSymbolsRounded.ttf') format('truetype');
+  src: url(@fontsource-variable/material-symbols-rounded/files/material-symbols-rounded-latin-full-normal.woff2) format('woff2-variations');
 }
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('./OpenSans-VariableFont_wdth,wght.ttf') format('truetype');
   font-weight: 300 800;
+  src: url(@fontsource-variable/open-sans/files/open-sans-latin-wdth-normal.woff2) format('woff2-variations');
+  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
 
