feat(SS): Fix UI tests(part 2)
icons for diagnostics

Refs: XRDDEV-3027

--- a/src/shared-ui/src/assets/xrd8/_material-symbols-rounded.scss
+++ b/src/shared-ui/src/assets/xrd8/_material-symbols-rounded.scss
@@ -114,6 +114,8 @@ $icons: (
   lock_reset: "\eade",
   manage_accounts: "\f02e",
   person: "\e7fd",
+  dashboard: "\e871",
+  sync_alt: "\ea18",
 );
 
 @mixin msr-icons {
