chore: Dark mode
Refs: XRDDEV-2918

--- a/src/shared-ui/src/assets/_material-symbols-rounded.scss
+++ b/src/shared-ui/src/assets/_material-symbols-rounded.scss
@@ -117,6 +117,8 @@ $icons: (
   dashboard: "\e871",
   sync_alt: "\ea18",
   network_check: "\e640",
+  bedtime: "\ef44",
+  wb_sunny: "\e430",
 );
 
 @mixin msr-icons {
