chore: update how icon\font is imported/used
Refs: XRDDEV-2904

--- a/src/central-server/admin-service/ui/src/assets/settings.scss
+++ b/src/central-server/admin-service/ui/src/assets/settings.scss
@@ -29,10 +29,10 @@
   $layers: false,
 
   $table-row-height: 56px,
-$button-text-transform: none,
+  $button-text-transform: none,
   $field-outline-opacity: .4,
   $ripple-animation-visible-opacity: .24,
-  $body-font-family: ('Open Sans', sans-serif),
+  $body-font-family: ('Open Sans Variable', sans-serif),
   $overlay-opacity: 0.6,
   $overlay-scrim-background: #0B283E,
   $field-control-padding-bottom: 12px,
