--- a/src/security-server/admin-service/ui/src/assets/settings.scss
+++ b/src/security-server/admin-service/ui/src/assets/settings.scss
@@ -32,7 +32,7 @@
   $button-text-transform: none,
   $field-outline-opacity: .4,
   $ripple-animation-visible-opacity: .24,
-  $body-font-family: ('Open Sans', sans-serif),
+  $body-font-family: ('Open Sans Variable', sans-serif),
   $overlay-opacity: 0.6,
   $overlay-scrim-background: #0B283E,
   $field-control-padding-bottom: 12px,
