--- a/src/shared-ui/src/assets/global-style.scss
+++ b/src/shared-ui/src/assets/global-style.scss
@@ -82,3 +82,39 @@ body {
 .xrd-search-field {
   max-width: 320px;
 }
+
+a.basic-link:focus-visible,
+a.v-breadcrumbs-item--link:focus-visible {
+  position: relative;
+  outline: none;
+
+  &:after {
+    content: '';
+    width: calc(100% + 8px);
+    height: 100%;
+    top: 0;
+    left: -4px;
+    position: absolute;
+    border-radius: 4px;
+    border: 2px solid rgb(var(--v-theme-accent));
+    box-shadow: 0 0 4px 0 rgb(var(--v-theme-accent));
+  }
+}
+
+.xrd-label:focus-visible {
+  position: relative;
+  outline: none;
+
+  &:after {
+    content: '';
+    position: absolute;
+    width: calc(100% + 6px);
+    height: calc(100% + 6px);
+    top: -3px;
+    left: -3px;
+
+    box-shadow: 0 0 4px 0 rgb(var(--v-theme-accent));
+    border: 2px solid rgb(var(--v-theme-accent));
+    border-radius: 4px
+  }
+}
