--- a/src/shared-ui/src/assets/global-style.scss
+++ b/src/shared-ui/src/assets/global-style.scss
@@ -115,6 +115,6 @@ a.v-breadcrumbs-item--link:focus-visible {
 
     box-shadow: 0 0 4px 0 rgb(var(--v-theme-accent));
     border: 2px solid rgb(var(--v-theme-accent));
-    border-radius: 4px
+    border-radius: 4px;
   }
 }
